<resources>
    <string name="app_name">Oppy</string>
    <string name="login">Please login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginbutton">Login</string>
    <string name="register">Register</string>
    <string name="fail_login">Can\'t login. Invalid username/password.</string>
    <string name="unfilled_fields">All fields must be filled</string>
    <string name="invalid_email">Please enter a valid e-mail account.</string>
    <string name="invalid_register_pass">Passwords should match and should be at least 8 characters long.</string>
    <string name="invalid_register_username_email">Username or email are is already registered</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="main_page">Main page</string>
    <string name="reset_points">Reset points</string>
    <string name="delete_acc">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="change_pass">Change password</string>
    <string name="change_mail">Change e-mail</string>
    <string name="anon">Anonymous</string>
    <string name="mail">mail</string>
    <string name="profile_pic">Profile picture</string>
    <string name="change">Change</string>
    <string name="new_mail">New e-mail</string>
    <string name="your_pass">Your password</string>
    <string name="pass_confirm">Confirm new password</string>
    <string name="new_pass">New password</string>
    <string name="current_pass">Current password</string>
    <string name="top50">Top 50 players</string>
    <string name="your_pos">Your position</string>
    <string name="number1">№ 1</string>
    <string name="points">Points</string>
    <string name="rank">Rank</string>
    <string name="action_page">Action Page</string>
    <string name="delete_preset">Delete preset</string>
    <string name="submit">Submit</string>
    <string name="del_preset">Del preset</string>
    <string name="time_until_point_loss">Time until point loss:</string>
    <string name="action_name">Action name</string>
    <string name="neg_switch_text">By toggling this action to an inactive state you will no longer gain 7158 pts/day.</string>
    <string name="pos_switch_text">By toggling this action to an active state you will automatically gain 7158 pts/day.</string>
</resources>
