<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mainpage"
        android:icon="@drawable/oppyicon"
        android:title="Main page"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_actionpage"
        android:icon="@drawable/ecology"
        android:title="Action page"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_friends"
        android:icon="@drawable/hug"
        android:title="@string/friends"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_leaderboard"
        android:icon="@drawable/raceflag"
        android:title="@string/leaderboard"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>

