<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:gravity="center_vertical"
    >

    <TextView
        android:id="@+id/text_list_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/rank" />

    <TextView
        android:id="@+id/text_list_username"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/text_list_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/points" />
</LinearLayout>
