<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nature"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/statustext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/usernametext"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernametext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/mailtext"
        app:layout_constraintStart_toStartOf="@+id/statustext"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/mailtext"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="296dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@+id/usernametext"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passtext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/mailtext"
        app:layout_constraintTop_toBottomOf="@+id/mailtext"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passtext2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="Re-enter password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/passtext"
        app:layout_constraintTop_toBottomOf="@+id/passtext"
        tools:targetApi="o" />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="116dp"
        android:background="@color/colorLogin"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passtext2" />

    <Button
        android:id="@+id/backButton1"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorLogin"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Back" />

</android.support.constraint.ConstraintLayout>